--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <ol>
       <li><a href="1-JavaScript Drum Kit/index.html">Drum Kit</a></li>
+      <li><a href="2-CSS-JS-Clock/index.html">CSS + JS Clock</a></li>
   </ol>
 
 
