--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <ol>
       <li><a href="1-JavaScript Drum Kit/index.html">Drum Kit</a></li>
       <li><a href="2-CSS-JS-Clock/index.html">CSS + JS Clock</a></li>
+      <li><a href="3-CSS-JS/index.html">CSS Variables - JS</a></li>
   </ol>
 
 
