4 day Array method

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <li><a href="1-JavaScript Drum Kit/index.html">Drum Kit</a></li>
       <li><a href="2-CSS-JS-Clock/index.html">CSS + JS Clock</a></li>
       <li><a href="3-CSS-JS/index.html">CSS Variables - JS</a></li>
+      <li><a href="4-Array-CardioDay/index.html">Array - Cardio Day</a></li>
   </ol>
 
 
